--- a/SistemaAlmacenesWeb/SistemaAlmacenesWeb.csproj
+++ b/SistemaAlmacenesWeb/SistemaAlmacenesWeb.csproj
@@ -246,6 +246,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="LibBD\BD_ALM_Almacenes_Usu.cs" />
     <Compile Include="LibBD\BD_ALM_Medidas.cs" />
     <Compile Include="LibBD\BD_ALM_Grupos_Items_Subdeptos.cs" />
     <Compile Include="LibBD\BD_ALM_Items.cs" />
