--- a/SistemaAlmacenesWeb/SistemaAlmacenesWeb.csproj
+++ b/SistemaAlmacenesWeb/SistemaAlmacenesWeb.csproj
@@ -347,6 +347,7 @@
     <Compile Include="LibBD\BD_ALM_Cat_Items .cs" />
     <Compile Include="LibBD\BD_ALM_Grupos_Items.cs" />
     <Compile Include="LibBD\BD_ALM_Almacenes.cs" />
+    <Compile Include="LibBD\BD_GEN_Subdeptos.cs" />
     <Compile Include="LibBD\BD_GEN_Subdeptos_Personas.cs" />
     <Compile Include="LibBD\BD_SAM_Modulos.cs" />
     <Compile Include="LibBD\BD_SAM_Parametros_Modulos.cs" />
